# microrobot-dl

./: .gitignore  2025_dataset.ipynb  README.md  data_loader.py  image_depth.ipynb  image_pose.ipynb  patch_metrics.py  pyproject.toml  resnet.ipynb
eval/: alexnet_pose_model_single_label.json  resnet18_pose_model_single_label.json  resnet34_pose_model_single_label.json  resnet34_pose_model_single_label_augmented.json  vgg19_bn_pose_model_single_label.json
eval/depth/: alexnet_depth.json  alexnet_depth_augmented.json  resnet18_depth.json  resnet18_depth_augmented.json  resnet34_depth.json  resnet34_depth_augmented.json  resnet50_depth.json  resnet50_depth_augmented.json  vgg11_bn_depth.json  vgg11_bn_depth_augmented.json  vgg19_bn_depth.json  vgg19_bn_depth_augmented.json
eval/multi_tasks/: alexnet_multi_tasks.json  alexnet_multi_tasks_augmented.json  alexnet_multi_tasks_augmented_multi_label.json  alexnet_multi_tasks_multi_label.json  resnet18_multi_tasks_augmented.json  resnet34_multi_tasks_augmented.json  resnet34_multi_tasks_augmented_multi_label.json  resnet50_multi_tasks_augmented.json  vgg11_bn_multi_tasks_augmented.json  vgg19_bn_multi_tasks_augmented.json
eval/pose_multi/: alexnet_pose_multi.json  (+11 more)
microrobot_dl/: config.py  data_loader.py  inference.py  model.py  task.py  test_set_imagedataset2025.json  testset.py  transform.py
notebooks/: 2025_dataset.ipynb  eda.ipynb  error_analysis.ipynb  image_depth.ipynb  image_pose.ipynb  model_comparison.ipynb  resnet.ipynb  resnet18_single_label.ipynb  single_label.ipynb  test.ipynb  training.ipynb
(+26 files in other folders)
